Ticket #28581: Clarified semantics of ExcelWriter.
There are three options: Regular, streaming, legacy. And streaming does
not support rich text in cells.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -5679,6 +5679,8 @@ com.top_logic.layout.table.export.ModelDownloadName.tooltip = Die Berechnung <i>
 com.top_logic.layout.table.export.StreamingExcelExportHandler = Streaming-Excel-Export-Handler
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey = Name des Tabellenblattes
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey.tooltip = Name des Excel-Blatts, das mit Daten gefüllt wird.
+com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.streaming = Streaming
+com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.streaming.tooltip = Ob der Streaming-Export verwendet werden soll. <p> Der Streaming-Export benötigt weniger Speicherplatz, unterstützt aber keine Rich-Text-Formatierung innerhalb der Zellen. </p>
 com.top_logic.layout.table.export.StreamingExcelExportHandler.tooltip = <i>Befehl</i> zum Exportieren von <i>Tabellendaten</i> in das Excel-Format.
 com.top_logic.layout.table.filter.CellExistenceTesterProxy = Zell-Existenz-Tester-Proxy
 com.top_logic.layout.table.filter.CellExistenceTesterProxy.Config.tester = Tester
