--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -5679,6 +5679,8 @@ com.top_logic.layout.table.export.ModelDownloadName.tooltip = <i>Download name p
 com.top_logic.layout.table.export.StreamingExcelExportHandler = Streaming Excel export handler
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey = Sheet name
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey.tooltip = Name of the Excel sheet that is filled with data.
+com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.streaming = Streaming
+com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.streaming.tooltip = Whether to use streaming export. <p> Streaming export uses less memory, but does not support rich text formatting within cells. </p>
 com.top_logic.layout.table.export.StreamingExcelExportHandler.tooltip = <i>Command</i> exporting <i>table data</i> to Excel format.
 com.top_logic.layout.table.filter.CellExistenceTesterProxy = Cell existence tester proxy
 com.top_logic.layout.table.filter.CellExistenceTesterProxy.Config.tester = Tester
