Ticket #28581: Clarified semantics of ExcelWriter.
There are three options: Regular, streaming, legacy. And streaming does
not support rich text in cells.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -5674,6 +5674,8 @@ com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportNameK
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportNameKey.tooltip = File name of the created download.
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey = Sheet name
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey.tooltip = Name of the Excel sheet that is filled with data.
+com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.streaming = Streaming
+com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.streaming.tooltip = Whether to use streaming export. <p> Streaming export uses less memory, but does not support rich text formatting within cells. </p>
 com.top_logic.layout.table.export.StreamingExcelExportHandler.tooltip = <i>Command</i> exporting <i>table data</i> to Excel format.
 com.top_logic.layout.table.filter.CellExistenceTesterProxy = Cell existence tester proxy
 com.top_logic.layout.table.filter.CellExistenceTesterProxy.Config.tester = Tester
