--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -5674,6 +5674,8 @@ com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportNameK
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportNameKey.tooltip = Dateiname des erstellten Downloads.
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey = Name des Tabellenblattes
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey.tooltip = Name des Excel-Blatts, das mit Daten gefüllt wird.
+com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.streaming = Streaming
+com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.streaming.tooltip = Ob der Streaming-Export verwendet werden soll. <p> Der Streaming-Export benötigt weniger Speicherplatz, unterstützt aber keine Rich-Text-Formatierung innerhalb der Zellen. </p>
 com.top_logic.layout.table.export.StreamingExcelExportHandler.tooltip = <i>Befehl</i> zum Exportieren von <i>Tabellendaten</i> in das Excel-Format.
 com.top_logic.layout.table.filter.CellExistenceTesterProxy = Zell-Existenz-Tester-Proxy
 com.top_logic.layout.table.filter.CellExistenceTesterProxy.Config.tester = Tester
