--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -497,6 +497,10 @@ com.top_logic.base.office.excel.POIExcelTemplate.VerticalAlign.CENTER = Center
 com.top_logic.base.office.excel.POIExcelTemplate.VerticalAlign.CENTER.tooltip = Enumeration literal for aligning cell contents to the center.
 com.top_logic.base.office.excel.POIExcelTemplate.VerticalAlign.TOP = Top
 com.top_logic.base.office.excel.POIExcelTemplate.VerticalAlign.TOP.tooltip = Enumeration literal for aligning cell contents to the top.
+com.top_logic.base.office.excel.handler.POITypeProvider = POI type provider
+com.top_logic.base.office.excel.handler.POITypeProvider.Config.type-handlers = Type handlers
+com.top_logic.base.office.excel.handler.POITypeProvider.Config.type-handlers.tooltip = Custom <i>poi type handlers</i> for exporting values of application-defined types.
+com.top_logic.base.office.excel.handler.POITypeProvider.tooltip = Manage <i>poi type handler</i> for different kinds of objects. <p>The <i>poi type handler</i> can be used to set values into an excel sheet.</p>
 com.top_logic.base.office.ppt.Powerpoint$GlobalConfig = Global configuration
 com.top_logic.base.office.ppt.Powerpoint$GlobalConfig.tooltip = Global configuration options for <i>powerpoint</i>.
 com.top_logic.base.office.ppt.Powerpoint.GlobalConfig.legacy-factory = Legacy factory
