--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -497,6 +497,10 @@ com.top_logic.base.office.excel.POIExcelTemplate.VerticalAlign.CENTER = Zentrum
 com.top_logic.base.office.excel.POIExcelTemplate.VerticalAlign.CENTER.tooltip = Aufzählungsliteral zur Ausrichtung des Zellinhalts auf die Mitte.
 com.top_logic.base.office.excel.POIExcelTemplate.VerticalAlign.TOP = Nach oben
 com.top_logic.base.office.excel.POIExcelTemplate.VerticalAlign.TOP.tooltip = Aufzählungsliteral zur Ausrichtung des Zellinhalts nach oben.
+com.top_logic.base.office.excel.handler.POITypeProvider = POI-Typ-Anbieter
+com.top_logic.base.office.excel.handler.POITypeProvider.Config.type-handlers = Typ-Handler
+com.top_logic.base.office.excel.handler.POITypeProvider.Config.type-handlers.tooltip = Benutzerdefinierte <i>Poi-Typ-Handler</i> für den Export von Werten anwendungsdefinierter Typen.
+com.top_logic.base.office.excel.handler.POITypeProvider.tooltip = Verwalten Sie <i>Poi Type Handler</i> für verschiedene Arten von Objekten. <p>Der <i>Poi Type Handler</i> kann verwendet werden, um Werte in eine Exceltabelle zu setzen.</p>
 com.top_logic.base.office.ppt.Powerpoint$GlobalConfig = Globale Konfiguration
 com.top_logic.base.office.ppt.Powerpoint$GlobalConfig.tooltip = Globale Konfigurationsoptionen für <i>Powerpoint</i>.
 com.top_logic.base.office.ppt.Powerpoint.GlobalConfig.legacy-factory = Verlassene Fabrik
