Ticket #28604: Enhanced documentation of change log model.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
@@ -1,6 +1,7 @@
 model.tl.changelog = Änderungshistorie
 model.tl.changelog.Change = Änderung
 model.tl.changelog.Change.object = Objekt
+model.tl.changelog.Change.object.tooltip = Das Objekt, dessen Eigenschaften verändert wurden.
 model.tl.changelog.Change.tooltip = Eine atomare Änderung, welche die Veränderung beschreibt, die an einem Objekt vorgenommen wurde. Eine solche Veränderung kann die Erzeugung, Löschung oder die Änderung von Eigenschaften des Objektes sein.
 model.tl.changelog.ChangeSet = Change-Set
 model.tl.changelog.ChangeSet.author = Author
@@ -17,6 +18,7 @@ model.tl.changelog.Modification = Modification
 model.tl.changelog.Modification.newValue = New value
 model.tl.changelog.Modification.oldValue = Old value
 model.tl.changelog.Modification.part = Eigenschaft
+model.tl.changelog.Modification.part.tooltip = Die Eigenschaft, deren Wert sich verändert hat.
 model.tl.changelog.Modification.tooltip = Die Änderung an einer einzelnen Eigenschaft eines Objektes.
 model.tl.changelog.Update = Änderung
 model.tl.changelog.Update.modifications = Eigenschaftsänderungen
