--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
@@ -1,6 +1,7 @@
 model.tl.changelog = Changelog
 model.tl.changelog.Change = Change
 model.tl.changelog.Change.object = Object
+model.tl.changelog.Change.object.tooltip = The object whose properties have been changed.
 model.tl.changelog.Change.tooltip = An atomic change that describes the change that has been made to an object. Such a change can be the creation, deletion or modification of properties of the object.
 model.tl.changelog.ChangeSet = Change set
 model.tl.changelog.ChangeSet.author = Author
@@ -17,6 +18,7 @@ model.tl.changelog.Modification = Modification
 model.tl.changelog.Modification.newValue = New value
 model.tl.changelog.Modification.oldValue = Old value
 model.tl.changelog.Modification.part = Property
+model.tl.changelog.Modification.part.tooltip = The property whose value has changed.
 model.tl.changelog.Modification.tooltip = The change to a single property of an object.
 model.tl.changelog.Update = Update
 model.tl.changelog.Update.modifications = Property modifications
