Ticket #28604: Use ResKey as commit message instead of Message object.
This allows for easy internationalized display of change log.

--- a/com.top_logic.demo/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.demo/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.demo.I18NConstants.GENERATED_DEMO_TYPES = Generated demo types.
 class.com.top_logic.demo.layout.form.demo.I18NConstants.ACCESS_RIGHTS = Access Rights
 class.com.top_logic.demo.layout.form.demo.I18NConstants.ACCESS_RIGHTS.tooltip = Here is a descriptive text about access rights.
 class.com.top_logic.demo.layout.form.demo.I18NConstants.ADMINISTRATION = Administration
