--- a/com.top_logic.kafka.demo/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.kafka.demo/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.kafka.demo.command.I18NConstants.KAFKA_DEMO_CREATE_MANY_OBJECTS__COUNT = Viele Demo-Objekte erstellt: {0}
 com.top_logic.kafka.demo.command.CreateManyObjectsCommand = Befehl "Viele Objekte erstellen"
 com.top_logic.kafka.demo.command.CreateManyObjectsCommand.Config.object-count = Anzahl der Objekte
 com.top_logic.kafka.demo.command.CreateManyObjectsCommand.Config.object-count.tooltip = Die Anzahl der zu erstellenden Objekte.
