--- a/com.top_logic.kafka.demo/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.kafka.demo/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.kafka.demo.command.I18NConstants.KAFKA_DEMO_CREATE_MANY_OBJECTS__COUNT = Created many demo objects: {0}
 com.top_logic.kafka.demo.command.CreateManyObjectsCommand = Create many objects command
 com.top_logic.kafka.demo.command.CreateManyObjectsCommand.Config.object-count = Object count
 com.top_logic.kafka.demo.command.CreateManyObjectsCommand.Config.object-count.tooltip = The number of objects to be created.
