--- a/com.top_logic.mail/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.mail/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.mail.base.I18NConstants.INITIALISING_ROOT_FOLDER = Mail-Stammordner initialisiert.
 com.top_logic.mail.base.MailServer = E-Mail-Processor
 com.top_logic.mail.base.MailServer$NamedFolder = Benannter Ordner
 com.top_logic.mail.base.MailServer$NamedFolder.tooltip = Konfiguration eines Mail-Ordners.
