--- a/com.top_logic.mail/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.mail/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.mail.base.I18NConstants.INITIALISING_ROOT_FOLDER = Initialized mail root folder.
 com.top_logic.mail.base.MailServer = Mail processor
 com.top_logic.mail.base.MailServer$NamedFolder = Named folder
 com.top_logic.mail.base.MailServer$NamedFolder.tooltip = Configuration of a mail folder.
