--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -56,8 +56,14 @@ class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__FIR
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST = {0}
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST_LOGIN = {0} ({1})
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.CHANGED_THEME_RELOGIN_NECESSARY__THEME = You have changed the theme ({0}). Please log in again to view the new theme.
+class.com.top_logic.knowledge.service.I18NConstants.BRANCH_CREATED__ID = Created branch {0}.
+class.com.top_logic.knowledge.service.I18NConstants.DATA_IMPORT__RES = Import of {0}.
+class.com.top_logic.knowledge.service.I18NConstants.INITIAL_IMPORT = Initial import.
+class.com.top_logic.knowledge.service.I18NConstants.NO_COMMIT_MESSAGE = No message.
+class.com.top_logic.knowledge.service.I18NConstants.SYNTHESIZED_COMMIT_DURING_REPLAY = Synthesized commit during replay.
 class.com.top_logic.knowledge.service.db2.I18NConstants.ACCESS_TO_IMMUTABLE_CONTEXT__ARGS = Illegal modification access. Currently no changes are allowed. Arguments: {0}
 class.com.top_logic.knowledge.service.db2.I18NConstants.DELETE_FAILED_REFERER_HAS_VETO__ITEMS_REFERERS = One of the objects {0} could not be deleted, because it is used by the following objects: {1}
+class.com.top_logic.knowledge.service.db2.I18NConstants.NESTED_TRANSACTION_ROLLED_BACK__COMMIT_REASON = Nested transaction {1} rolled back: {2}
 class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSON_TABLE_DEFINITION_EXPECTED__ACTUAL_EXPECTED = Error: A definition for the application type "{1}" is expected, but a definition for "{0}" was given.
 class.com.top_logic.layout.I18NConstants.ERROR_TARGET_CONTROL_NOT_FOUND__ID_CMD_ARGS = Target control {0} not found delivering command "{1}" arguments: {2}
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = The object {0} is not a group.
@@ -192,7 +198,12 @@ class.com.top_logic.model.visit.I18NConstants.TYPE_TOOLTIP.help = Parameters: <u
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_MORE_ELEMENTS__ELEMENTS = Do you really want to delete the objects "{0}"?
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_ONE_ELEMENT__ELEMENT = Do you really want to delete the object "{0}"?
 class.com.top_logic.tool.boundsec.gui.I18NConstants.ERROR_NOT_A_ROLE__ELEMENT = The object {0} is not a role.
+class.com.top_logic.util.I18NConstants.APPLICATION_STARTUP__NAME_VERSION = Application startup: {0} {1}
+class.com.top_logic.util.I18NConstants.CREATING_INITIAL_GROUPS_AND_ROLES = Created groups and roles.
+class.com.top_logic.util.I18NConstants.INITIALIZING_LAYOUT_BASED_SECURITY = Initialized view permissions.
 class.com.top_logic.util.license.I18NConstants.LICENCE_VALID = Valid
+class.com.top_logic.util.model.I18NConstants.CREATING_CLASSIFICATIONS = Created global classifications.
+class.com.top_logic.util.model.I18NConstants.CREATING_TL_MODEL = Created application model.
 class.com.top_logic.util.monitor.I18NConstants.DELETE_LICENSE_INFO = Do you want to remove the current license?
 class.com.top_logic.util.monitor.I18NConstants.JAVA_INFO = Java
 class.com.top_logic.util.monitor.I18NConstants.JAVA_RUNTIME = Runtime
