--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -1,5 +1,6 @@
 class.com.top_logic.bpe.execution.engine.I18NConstants.ERROR_IMPORT_FAILED = Import failed.
 class.com.top_logic.bpe.execution.engine.I18NConstants.ERROR_IMPORT_FAILED__DETAILS = Import failed: {0}
+class.com.top_logic.bpe.execution.engine.I18NConstants.IMPORTED_WORKFLOWS = Imported workflows.
 class.com.top_logic.bpe.layout.execution.I18NConstants.CANNOT_EDIT_TASK = The current task is flagged as non-editable.
 class.com.top_logic.bpe.layout.execution.I18NConstants.FINISH_TASK_ACCESS_DENIED = You are not authorized for this processing.
 class.com.top_logic.bpe.layout.execution.I18NConstants.FINISH_TASK_DISABLED = The form contains invalid values.
