--- a/com.top_logic.demo/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.demo/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.demo.I18NConstants.GENERATED_DEMO_TYPES = Demo-Typen generiert.
 class.com.top_logic.demo.layout.form.demo.I18NConstants.ACCESS_RIGHTS = Zugangsrechte
 class.com.top_logic.demo.layout.form.demo.I18NConstants.ACCESS_RIGHTS.tooltip = Hier finden Sie einen beschreibenden Text über Zugangsrechte.
 class.com.top_logic.demo.layout.form.demo.I18NConstants.ADMINISTRATION = Verwaltung
