Ticket #28604: Use ResKey as commit message instead of Message object.
This allows for easy internationalized display of change log.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -15,6 +15,8 @@ class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTING_OB
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_FINISHED = Import beendet.
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_PROGRESS = Daten importieren...
 class.com.top_logic.element.layout.instances.importer.I18NConstants.PARSING_DATA = Analysieren von Daten.
+class.com.top_logic.element.layout.meta.I18NConstants.CREATE_GLOBAL_DISPLAY_DESCRIPTION = Globale Anzeigebeschreibung erstellt.
+class.com.top_logic.element.layout.meta.I18NConstants.DELETE_GLOBAL_DISPLAY_DESCRIPTION = Globale Anzeigebeschreibung gelöscht.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_MODULE_WITH_NAME_EXISTS__NAME = Ein Modul mit dem Namen ''{0}'' existiert bereits.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_PART_WITH_NAME_EXISTS__NAME_GENERALIZATION = Ein Typteil mit dem Namen ''{0}'' existiert bereits in der Generalisierung ''{1}''.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_PART_WITH_NAME_EXISTS__NAME_TYPE = Ein Typteil mit dem Namen ''{0}'' existiert bereits in ''{1}''.
@@ -1326,7 +1328,6 @@ com.top_logic.element.meta.kbbased.storage.ExternalStorage.tooltip = <i>Atomarer
 com.top_logic.element.meta.kbbased.storage.FallbackExternalStorage = Fallback externe Speicherung
 com.top_logic.element.meta.kbbased.storage.FallbackExternalStorage.tooltip = <i>Externer Speicher</i>, der zuerst die lokalen Werte nachschlägt.
 com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage = Speicherung in der Quelltabelle
-com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage.Config.storage-attribute = Speicher-Attribut
 com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage.Config.storage-attribute.tooltip = Der Name der <i>MO-Referenz</i>, die zum Speichern der Referenz auf verwendet wird. <p> Wenn nicht gesetzt, wird standardmäßig der Name des Referenzattributs name verwendet. </p>
 com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage.Config.storage-type = Speichertyp
 com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage.Config.storage-type.tooltip = Name des Tabellentyps, der das <i>Attribut Speicherung</i> definiert.
@@ -1339,10 +1340,10 @@ com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage = Inline-Spei
 com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage$StoreInTargetConfig = In der Zielkonfiguration speichern
 com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage$StoreInTargetConfig.tooltip = Konfigurationsoptionen, um den Referrer eines Objekts inline in der Tabelle des Ziels zu speichern.
 com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.container-column = Container-Spalte
-com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.container-column.tooltip = Name der Spalte in der Zieltabelle, die das referenzierende Objekt enthält.
+com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.container-column.tooltip = Name der Spalte in der Zieltabelle, die die ID des referenzierenden Objekts enthält (in der Regel der Container einer Zusammensetzung). <p> Wenn die Werte, die mit der von diesem Speicher implementierten <i>Referenz</i> kompatibel sind, in verschiedenen Tabellen gespeichert werden können, müssen alle diese Tabellen diese Containerspalte definieren. Alle potenziellen Tabellen müssen sich von der Tabelle ableiten, die für den Zieltyp der Referenz dieses Speichers deklariert ist, siehe <i>Tabellenname</i>. </p>
 com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.reference-column = Referenzspalte
-com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.reference-column.tooltip = Name der Spalte in der Zieltabelle, die den <i>Verweis</i> enthält, der die Assoziation zwischen Verweiser und referenziertem Objekt definiert. <p> Kann <code>null</code> sein. In diesem Fall darf die Containerspalte nicht von mehreren Referenzen verwendet werden, um ihre Werte zu speichern. </p>
-com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.tooltip = <i>Auflistung</i> von Referenzen, die im Ziel gespeichert werden. <p> Wenn ein Element A auf B1, B2 verweist, dann wird diese Beziehung gespeichert, indem ein Inline-Verweis auf A in der Tabelle von B1 und B2 gespeichert wird. </p> <p> Insbesondere ist es nicht möglich, dass A1 und A2 beide auf dasselbe B mit demselben Attribut verweisen. </p>
+com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.reference-column.tooltip = Name der Spalte in der Zieltabelle, die den <i>Verweis</i> enthält, der die Assoziation zwischen dem referenzierenden und dem referenzierten Objekt definiert. <p> Die Speicherung der Modellreferenz zusammen mit der ID des Containerobjekts in der Tabelle der referenzierten Objekte ermöglicht die Wiederverwendung derselben <i>Container-Spalte</i> zur Speicherung mehrerer sich gegenseitig ausschließender <i>Referenzen</i>. </p> <p> Kann <code>null</code> sein. In diesem Fall darf die Container-Spalte nicht von mehreren Referenzen zur Speicherung ihrer Werte verwendet werden. </p>
+com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.tooltip = <i>Auflistung von</i> Referenzen, die einen Fremdschlüssel des Basisobjekts in den referenzierten Objekten speichert. <p> Wenn ein Element A auf B1, B2 verweist, dann ist diese Beziehung die ID von A in den Fremdschlüsselspalten der Tabelle von B1 und B2. </p> <p> Insbesondere ist es nicht möglich, dass A1 und A2 beide auf dasselbe B verweisen und dabei dieselbe Fremdschlüsselspalte in der Tabelle von B verwenden. </p>
 com.top_logic.element.meta.kbbased.storage.InlineListStorage = Sortierte Speicherung in der Zieltabelle
 com.top_logic.element.meta.kbbased.storage.InlineListStorage.Config.order-column = Ordnungsspalte
 com.top_logic.element.meta.kbbased.storage.InlineListStorage.Config.order-column.tooltip = Name der Spalte in der Zieltabelle, die die Reihenfolge der referenzierten Objekte enthält.
