--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -15,6 +15,8 @@ class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTING_OB
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_FINISHED = Import finished.
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_PROGRESS = Importing data...
 class.com.top_logic.element.layout.instances.importer.I18NConstants.PARSING_DATA = Parsing data.
+class.com.top_logic.element.layout.meta.I18NConstants.CREATE_GLOBAL_DISPLAY_DESCRIPTION = Created global display description.
+class.com.top_logic.element.layout.meta.I18NConstants.DELETE_GLOBAL_DISPLAY_DESCRIPTION = Deleted global display description.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_MODULE_WITH_NAME_EXISTS__NAME = A module with name ''{0}'' already exists.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_PART_WITH_NAME_EXISTS__NAME_GENERALIZATION = A type part with name ''{0}'' already exists in the generalization ''{1}''.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_PART_WITH_NAME_EXISTS__NAME_TYPE = A type part with name ''{0}'' already exists in ''{1}''.
@@ -1326,7 +1328,6 @@ com.top_logic.element.meta.kbbased.storage.ExternalStorage.tooltip = <i>Atomic s
 com.top_logic.element.meta.kbbased.storage.FallbackExternalStorage = Fallback external storage
 com.top_logic.element.meta.kbbased.storage.FallbackExternalStorage.tooltip = <i>External storage</i> that will lookup local values first.
 com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage = Storage in the source table
-com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage.Config.storage-attribute = Storage attribute
 com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage.Config.storage-attribute.tooltip = The name of the <i>MO reference</i> which is used to store the reference to. <p> If not set, it defaults to the name of the reference attribute name. </p>
 com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage.Config.storage-type = Storage type
 com.top_logic.element.meta.kbbased.storage.ForeignKeyStorage.Config.storage-type.tooltip = Table type name that defines the <i>Storage attribute</i>.
@@ -1339,10 +1340,10 @@ com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage = Inline coll
 com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage$StoreInTargetConfig = Store in target configuration
 com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage$StoreInTargetConfig.tooltip = Configuration options to store the referrer of an object inline in the table of the target.
 com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.container-column = Container column
-com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.container-column.tooltip = Name of the column in the target table which holds the referencing object.
+com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.container-column.tooltip = Name of the column in the target table which holds the ID of the referencing object (typically the container of a composition). <p> If the values compatible with the <i>reference</i> implemented by this storage can be stored in different tables, all those tables must define this container column. All potential tables must derive from the table that is declared for the target type of the reference of this storage, see <i>table name</i>. </p>
 com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.reference-column = Reference column
-com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.reference-column.tooltip = Name of the column in the target table that holds the <i>reference</i> defining the association between referrer and referenced object. <p> May be <code>null</code>. In this case the container column must not be used by multiple references to store their values. </p>
-com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.tooltip = <i>Collection storage</i> for references which is stored in the target. <p> If an element A refers to B1, B2, then this relation is saved by storing an inline reference to A in the table of B1 and B2. </p> <p> Especially, is it not possible to have A1, A2 both pointing to the same B with the same attribute. </p>
+com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.StoreInTargetConfig.reference-column.tooltip = Name of the column in the target table that holds the <i>reference</i> defining the association between referrer and referenced object. <p> Storing the model reference along with the ID of the container object in the table of the referenced objects allows to reuse the same <i>Container column</i> for storing multiple mutually exclusive <i>references</i>. </p> <p> May be <code>null</code>. In this case the container column must not be used by multiple references to store their values. </p>
+com.top_logic.element.meta.kbbased.storage.InlineCollectionStorage.tooltip = <i>Collection storage</i> for references that stores a foreign key of the base object in the referenced objects. <p> If an element A refers to B1, B2, then this relation is the ID of A in foreign key columns of the table of B1 and B2. </p> <p> Especially, is it not possible to have A1, A2 both pointing to the same B using the same foreign key storage column in the table of B. This is no restriction, if this storage is used for composition references, since each part can only have a single container. </p>
 com.top_logic.element.meta.kbbased.storage.InlineListStorage = Sorted storage in the target table
 com.top_logic.element.meta.kbbased.storage.InlineListStorage.Config.order-column = Order column
 com.top_logic.element.meta.kbbased.storage.InlineListStorage.Config.order-column.tooltip = Name of the column in the target table that holds the order of the referenced objects.
