--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -56,8 +56,14 @@ class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__FIR
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST = {0}
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST_LOGIN = {0} ({1})
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.CHANGED_THEME_RELOGIN_NECESSARY__THEME = Sie haben das Theme geändert ({0}). Bitte melden Sie sich erneut an, um das neue Theme zu sehen.
+class.com.top_logic.knowledge.service.I18NConstants.BRANCH_CREATED__ID = Branch wurde erstellt: {0}.
+class.com.top_logic.knowledge.service.I18NConstants.DATA_IMPORT__RES = Datenimport: {0}.
+class.com.top_logic.knowledge.service.I18NConstants.INITIAL_IMPORT = Initialimport.
+class.com.top_logic.knowledge.service.I18NConstants.NO_COMMIT_MESSAGE = Keine Nachricht.
+class.com.top_logic.knowledge.service.I18NConstants.SYNTHESIZED_COMMIT_DURING_REPLAY = Synthetisiertes Commit aus Migration.
 class.com.top_logic.knowledge.service.db2.I18NConstants.ACCESS_TO_IMMUTABLE_CONTEXT__ARGS = Unzulässiger Änderungszugriff. Derzeit sind keine Änderungen erlaubt. Argumente: {0}
 class.com.top_logic.knowledge.service.db2.I18NConstants.DELETE_FAILED_REFERER_HAS_VETO__ITEMS_REFERERS = Eines der Objekte {0} kann nicht gelöscht werden, weil es von den folgenden Objekten verwendet wird: {1}
+class.com.top_logic.knowledge.service.db2.I18NConstants.NESTED_TRANSACTION_ROLLED_BACK__COMMIT_REASON = Verschachtelte Transaktion {1} rückgängig gemacht: {2}
 class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSON_TABLE_DEFINITION_EXPECTED__ACTUAL_EXPECTED = Fehler: Es wird eine Definition für den Anwendungstyp "{1}" erwartet, aber es wurde eine Definition für "{0}" angegeben.
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = Das Objekt {0} ist keine Gruppe.
 class.com.top_logic.layout.component.I18NConstants.NEW_LAYOUT = Die Sicht wurde neu erstellt. Um die Sicht zu entfernen, verwenden Sie "Sicht löschen".
@@ -189,7 +195,12 @@ class.com.top_logic.model.visit.I18NConstants.TYPE_TOOLTIP.help = Parameter: <ul
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_MORE_ELEMENTS__ELEMENTS = Wollen Sie die Objekte "{0}" wirklich löschen?
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_ONE_ELEMENT__ELEMENT = Wollen Sie das Objekt "{0}" wirklich löschen?
 class.com.top_logic.tool.boundsec.gui.I18NConstants.ERROR_NOT_A_ROLE__ELEMENT = Das Objekt {0} ist keine Rolle.
+class.com.top_logic.util.I18NConstants.APPLICATION_STARTUP__NAME_VERSION = Start der Anwendung: {0} {1}
+class.com.top_logic.util.I18NConstants.CREATING_INITIAL_GROUPS_AND_ROLES = Erstellte Gruppen und Rollen.
+class.com.top_logic.util.I18NConstants.INITIALIZING_LAYOUT_BASED_SECURITY = Initialisierte Ansichtsberechtigungen.
 class.com.top_logic.util.license.I18NConstants.LICENCE_VALID = Gültig
+class.com.top_logic.util.model.I18NConstants.CREATING_CLASSIFICATIONS = Globale Klassifikationen erstellt.
+class.com.top_logic.util.model.I18NConstants.CREATING_TL_MODEL = Anwendungsmodell erstellt.
 class.com.top_logic.util.monitor.I18NConstants.DELETE_LICENSE_INFO = Möchten Sie die aktuelle Lizenz entfernen?
 class.com.top_logic.util.monitor.I18NConstants.JAVA_INFO = Java
 class.com.top_logic.util.monitor.I18NConstants.JAVA_RUNTIME = Laufzeit
