Ticket #28604: Added missing I18N.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -33,6 +33,7 @@ class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.EDIT_DETAILS_T
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.MISSING_TYPE_COMPUTATION__ATTRIBUTE = Keine Annotation des Modelltyps bei Attribut "{0}" gefunden.
 class.com.top_logic.element.meta.kbbased.I18NConstants.ERROR_SETTING_VALUE__ATTRIBUTE_VALUE = Problem beim Setzen des Attributwertes ''{0}'' auf ''{1}''.
 class.com.top_logic.element.meta.kbbased.I18NConstants.NO_SUCH_GENERATOR__NAME = Es gibt keinen Generator mit dem Namen ''{0}''.
+class.com.top_logic.element.meta.kbbased.I18NConstants.START_UP_WRAPPER_RESOLVER__IMPLCLASS = Wrapper-Auflöser gestartet ({0}).
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_CANNOT_ACCESS_ATTRIBUTE__OBJ_ATTR_ERR = Der Zugriff auf das Attribut "{1}" von "{0}" ist fehlgeschlagen: {2}
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_EMPTY_VALUE_IN_MANDATORY_ATTRIBUTE = Der Wert darf nicht leer sein.
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_VALUE_IS_NOT_TLANNOTATION__VALUE = Der angegebene Wert {0} ist keine TLAnnotation.
