--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -33,6 +33,7 @@ class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.EDIT_DETAILS_T
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.MISSING_TYPE_COMPUTATION__ATTRIBUTE = No model type annotation found at attribute "{0}".
 class.com.top_logic.element.meta.kbbased.I18NConstants.ERROR_SETTING_VALUE__ATTRIBUTE_VALUE = Problem setting attribute value ''{0}'' to ''{1}''.
 class.com.top_logic.element.meta.kbbased.I18NConstants.NO_SUCH_GENERATOR__NAME = There is no generator with name ''{0}''.
+class.com.top_logic.element.meta.kbbased.I18NConstants.START_UP_WRAPPER_RESOLVER__IMPLCLASS = Started wrapper resolver ({0}).
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_CANNOT_ACCESS_ATTRIBUTE__OBJ_ATTR_ERR = Failed to access attribute "{1}" of "{0}": {2}
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_EMPTY_VALUE_IN_MANDATORY_ATTRIBUTE = The value must not be empty.
 class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_VALUE_IS_NOT_TLANNOTATION__VALUE = The given value {0} is not a TLAnnotation.
