Ticket #28604: Added commit messages for system startup tasks.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -21,6 +21,7 @@ class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_SUBMIT = Save an
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_TITLE = Password change required
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_WELCOME__USER = Welcome {0}!
 class.com.top_logic.base.search.I18NConstants.SEARCH_STRING_SYNTAX_ERROR_UNCLOSED_PHRASE__PHRASE_INPUT = Illegal search string. The phrase ''{0}'' in input ''{1}'' is not closed.
+class.com.top_logic.base.services.I18NConstants.STARTED_CURRENCY_SYSTEM = Started currency system.
 class.com.top_logic.common.folder.ui.I18NConstants.NO_FOLDER_AVAILABLE = No folder available.
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPDATE_DIALOG_FILE = File
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPDATE_DIALOG_FILE.tooltip = Select new version of file. The file selected must have the same name as the file to update.
@@ -56,6 +57,8 @@ class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__FIR
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST = {0}
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST_LOGIN = {0} ({1})
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.CHANGED_THEME_RELOGIN_NECESSARY__THEME = You have changed the theme ({0}). Please log in again to view the new theme.
+class.com.top_logic.knowledge.monitor.I18NConstants.LOGGED_IN_USER__USER = Logged in user: {0}
+class.com.top_logic.knowledge.monitor.I18NConstants.LOGGED_OUT_USER__USER = Logged out user: {0}
 class.com.top_logic.knowledge.service.I18NConstants.BRANCH_CREATED__ID = Created branch {0}.
 class.com.top_logic.knowledge.service.I18NConstants.DATA_IMPORT__RES = Import of {0}.
 class.com.top_logic.knowledge.service.I18NConstants.INITIAL_IMPORT = Initial import.
@@ -65,6 +68,7 @@ class.com.top_logic.knowledge.service.db2.I18NConstants.ACCESS_TO_IMMUTABLE_CONT
 class.com.top_logic.knowledge.service.db2.I18NConstants.DELETE_FAILED_REFERER_HAS_VETO__ITEMS_REFERERS = One of the objects {0} could not be deleted, because it is used by the following objects: {1}
 class.com.top_logic.knowledge.service.db2.I18NConstants.NESTED_TRANSACTION_ROLLED_BACK__COMMIT_REASON = Nested transaction {1} rolled back: {2}
 class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSON_TABLE_DEFINITION_EXPECTED__ACTUAL_EXPECTED = Error: A definition for the application type "{1}" is expected, but a definition for "{0}" was given.
+class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Updated account list.
 class.com.top_logic.layout.I18NConstants.ERROR_TARGET_CONTROL_NOT_FOUND__ID_CMD_ARGS = Target control {0} not found delivering command "{1}" arguments: {2}
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = The object {0} is not a group.
 class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Failed to update command executability of command "{0}" in component "{1}": {2}
@@ -222,6 +226,15 @@ class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_ERROR_ACCESSIN
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_JNDI_PROPERTIES = JNDI Properties
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_SYSTEM_PROPERTIES = System properties
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_VM_ARGUMENTS = VM arguments
+class.com.top_logic.util.sched.I18NConstants.CLEANED_GLOBAL_TASK_LOG__TASK = Cleaned task log of global task: {0}.
+class.com.top_logic.util.sched.I18NConstants.CLEANED_TASK_LOG = Cleaned task log.
+class.com.top_logic.util.sched.I18NConstants.CLEARED_CLUSTER_LOCK__TASK = Cleared cluster lock for task: {0}
+class.com.top_logic.util.sched.I18NConstants.COMPRESSED_TASK_RESULT_LIST__TASK = Compressed task result list: {0}
+class.com.top_logic.util.sched.I18NConstants.CREATED_TASK__TASK = Created task: {0}
+class.com.top_logic.util.sched.I18NConstants.REQUESTED_CLUSTER_LOCK_FOR__TASK = Requested cluster lock for task: {0}.
+class.com.top_logic.util.sched.I18NConstants.STARTED_TASK__TASK = Started task: {0}
+class.com.top_logic.util.sched.I18NConstants.TASK_CANCELED__TASK = Task canceled: {0}
+class.com.top_logic.util.sched.I18NConstants.TASK_FINISHED__TASK = Task finished: {0}
 com.top_logic.base.accesscontrol.ApplicationPages$Config = Configuration
 com.top_logic.base.accesscontrol.ApplicationPages$Config.tooltip = Global pages configuration options.
 com.top_logic.base.accesscontrol.ApplicationPages.Config.buzzyPage = Buzzy page
