--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -21,6 +21,7 @@ class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_SUBMIT = Speiche
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_TITLE = Passwortänderung erforderlich
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_WELCOME__USER = Willkommen {0}!
 class.com.top_logic.base.search.I18NConstants.SEARCH_STRING_SYNTAX_ERROR_UNCLOSED_PHRASE__PHRASE_INPUT = Unzulässiger Suchbegriff. Die Phrase ''{0}'' in Eingabe ''{1}'' ist nicht geschlossen.
+class.com.top_logic.base.services.I18NConstants.STARTED_CURRENCY_SYSTEM = Währungssystems gestartet.
 class.com.top_logic.common.folder.ui.I18NConstants.NO_FOLDER_AVAILABLE = Kein Ordner verfügbar.
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPDATE_DIALOG_FILE = Datei
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPDATE_DIALOG_FILE.tooltip = Wählen Sie die neue Version der Datei. Die ausgewählte Datei muss den gleichen Namen haben wie die zu aktualisierende Datei.
@@ -56,6 +57,8 @@ class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__FIR
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST = {0}
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST_LOGIN = {0} ({1})
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.CHANGED_THEME_RELOGIN_NECESSARY__THEME = Sie haben das Theme geändert ({0}). Bitte melden Sie sich erneut an, um das neue Theme zu sehen.
+class.com.top_logic.knowledge.monitor.I18NConstants.LOGGED_IN_USER__USER = Benutzer angemeldet: {0}
+class.com.top_logic.knowledge.monitor.I18NConstants.LOGGED_OUT_USER__USER =  Benutzer abgemeldet: {0}
 class.com.top_logic.knowledge.service.I18NConstants.BRANCH_CREATED__ID = Branch wurde erstellt: {0}.
 class.com.top_logic.knowledge.service.I18NConstants.DATA_IMPORT__RES = Datenimport: {0}.
 class.com.top_logic.knowledge.service.I18NConstants.INITIAL_IMPORT = Initialimport.
@@ -65,6 +68,7 @@ class.com.top_logic.knowledge.service.db2.I18NConstants.ACCESS_TO_IMMUTABLE_CONT
 class.com.top_logic.knowledge.service.db2.I18NConstants.DELETE_FAILED_REFERER_HAS_VETO__ITEMS_REFERERS = Eines der Objekte {0} kann nicht gelöscht werden, weil es von den folgenden Objekten verwendet wird: {1}
 class.com.top_logic.knowledge.service.db2.I18NConstants.NESTED_TRANSACTION_ROLLED_BACK__COMMIT_REASON = Verschachtelte Transaktion {1} rückgängig gemacht: {2}
 class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSON_TABLE_DEFINITION_EXPECTED__ACTUAL_EXPECTED = Fehler: Es wird eine Definition für den Anwendungstyp "{1}" erwartet, aber es wurde eine Definition für "{0}" angegeben.
+class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Benutzerkonten aktualisiert.
 class.com.top_logic.layout.I18NConstants.ERROR_TARGET_CONTROL_NOT_FOUND__ID_CMD_ARGS = Zielsteuerung {0} nicht gefunden, liefert Befehlsargumente{1}": {2}
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = Das Objekt {0} ist keine Gruppe.
 class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Die Ausführbarkeit des Befehls "{0}" in der Komponente "{1}" konnte nicht aktualisiert werden: {2}
@@ -222,6 +226,15 @@ class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_ERROR_ACCESSIN
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_JNDI_PROPERTIES = JNDI-Properties
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_SYSTEM_PROPERTIES = System-Eigenschaften
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_VM_ARGUMENTS = VM-Argumente
+class.com.top_logic.util.sched.I18NConstants.CLEANED_GLOBAL_TASK_LOG__TASK = Aufgabenprotokoll der globalen Aufgabe breinigt: {0}.
+class.com.top_logic.util.sched.I18NConstants.CLEANED_TASK_LOG = Aufgabenprotokoll bereinigt.
+class.com.top_logic.util.sched.I18NConstants.CLEARED_CLUSTER_LOCK__TASK = Clustersperre für Aufgabe gelöscht: {0}
+class.com.top_logic.util.sched.I18NConstants.COMPRESSED_TASK_RESULT_LIST__TASK = Aufgabenergebnisliste komprimiert: {0}
+class.com.top_logic.util.sched.I18NConstants.CREATED_TASK__TASK = Aufgabe erstellt: {0}
+class.com.top_logic.util.sched.I18NConstants.REQUESTED_CLUSTER_LOCK_FOR__TASK = Clustersperre angefordert für Aufgabe: {0}.
+class.com.top_logic.util.sched.I18NConstants.STARTED_TASK__TASK = Aufgabe gestartet: {0}
+class.com.top_logic.util.sched.I18NConstants.TASK_CANCELED__TASK = Aufgabe abgebrochen: {0}
+class.com.top_logic.util.sched.I18NConstants.TASK_FINISHED__TASK = Aufgabe beendet: {0}
 com.top_logic.base.accesscontrol.ApplicationPages$Config = Konfiguration
 com.top_logic.base.accesscontrol.ApplicationPages$Config.tooltip = Konfigurationsoptionen für globale Seiten.
 com.top_logic.base.accesscontrol.ApplicationPages.Config.buzzyPage = Schwungvolle Seite
