--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -58,7 +58,7 @@ class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAS
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.ACCOUNT_LABEL__LAST_LOGIN = {0} ({1})
 class.com.top_logic.knowledge.gui.layout.person.I18NConstants.CHANGED_THEME_RELOGIN_NECESSARY__THEME = Sie haben das Theme geändert ({0}). Bitte melden Sie sich erneut an, um das neue Theme zu sehen.
 class.com.top_logic.knowledge.monitor.I18NConstants.LOGGED_IN_USER__USER = Benutzer angemeldet: {0}
-class.com.top_logic.knowledge.monitor.I18NConstants.LOGGED_OUT_USER__USER =  Benutzer abgemeldet: {0}
+class.com.top_logic.knowledge.monitor.I18NConstants.LOGGED_OUT_USER__USER = Benutzer abgemeldet: {0}
 class.com.top_logic.knowledge.service.I18NConstants.BRANCH_CREATED__ID = Branch wurde erstellt: {0}.
 class.com.top_logic.knowledge.service.I18NConstants.DATA_IMPORT__RES = Datenimport: {0}.
 class.com.top_logic.knowledge.service.I18NConstants.INITIAL_IMPORT = Initialimport.
@@ -78,8 +78,13 @@ class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = Die Sich
 class.com.top_logic.layout.currency.I18NConstants.ERROR_NO_SUCH_CURRENCY__VALUE = Keine solche Währung: {0}
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.GROUP_NOT_COLLAPSIBLE = Die Gruppe kann nicht zugeklappt werden.
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.TOGGLE = Auf- oder zuklappen
+class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Objekt erstellt: {0}
+class.com.top_logic.layout.form.component.I18NConstants.DELETED__MODEL = Objekt gelöscht: {0}
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE = Aktualisieren
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE.tooltip = Setzt die Ansicht zurück und lädt sie neu aus den zugrunde liegenden Daten.
+class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION = Operation "{0}" durchgeführt.
+class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION_MODEL = Operation "{0}" durchgeführt auf "{1}".
+class.com.top_logic.layout.form.component.I18NConstants.UPDATED__MODEL = Objekt aktualisiert: {0}
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_ALL = Alle auswählen
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_DISPLAY__CNT_TOTAL = {0} / {1}
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_NONE = Auswahl löschen
@@ -227,7 +232,7 @@ class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_JNDI_PROPERTIE
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_SYSTEM_PROPERTIES = System-Eigenschaften
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_VM_ARGUMENTS = VM-Argumente
 class.com.top_logic.util.sched.I18NConstants.CLEANED_GLOBAL_TASK_LOG__TASK = Aufgabenprotokoll der globalen Aufgabe breinigt: {0}.
-class.com.top_logic.util.sched.I18NConstants.CLEANED_TASK_LOG = Aufgabenprotokoll bereinigt.
+class.com.top_logic.util.sched.I18NConstants.CLEANED_TASK_LOG__TASK = Aufgabenprotokoll bereinigt: {0}
 class.com.top_logic.util.sched.I18NConstants.CLEARED_CLUSTER_LOCK__TASK = Clustersperre für Aufgabe gelöscht: {0}
 class.com.top_logic.util.sched.I18NConstants.COMPRESSED_TASK_RESULT_LIST__TASK = Aufgabenergebnisliste komprimiert: {0}
 class.com.top_logic.util.sched.I18NConstants.CREATED_TASK__TASK = Aufgabe erstellt: {0}
