Ticket #28604: Added generic commit messages to CRUD operations.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -75,8 +75,13 @@ class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = The view
 class.com.top_logic.layout.currency.I18NConstants.ERROR_NO_SUCH_CURRENCY__VALUE = No such currency: {0}
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.GROUP_NOT_COLLAPSIBLE = The group can not be collapsed.
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.TOGGLE = Expand or collapse.
+class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Created object: {0}
+class.com.top_logic.layout.form.component.I18NConstants.DELETED__MODEL = Deleted object: {0}
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE = Reload
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE.tooltip = Resets the view and reloads it from underlying data.
+class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION = Performed operation "{0}".
+class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION_MODEL = Performed operation "{0}" on "{1}".
+class.com.top_logic.layout.form.component.I18NConstants.UPDATED__MODEL = Updated object: {0}
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_ALL = Select all
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_DISPLAY__CNT_TOTAL = {0} / {1}
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_NONE = Clear selection
@@ -224,7 +229,7 @@ class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_JNDI_PROPERTIE
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_SYSTEM_PROPERTIES = System properties
 class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_VM_ARGUMENTS = VM arguments
 class.com.top_logic.util.sched.I18NConstants.CLEANED_GLOBAL_TASK_LOG__TASK = Cleaned task log of global task: {0}.
-class.com.top_logic.util.sched.I18NConstants.CLEANED_TASK_LOG = Cleaned task log.
+class.com.top_logic.util.sched.I18NConstants.CLEANED_TASK_LOG__TASK = Cleaned task log: {0}
 class.com.top_logic.util.sched.I18NConstants.CLEARED_CLUSTER_LOCK__TASK = Cleared cluster lock for task: {0}
 class.com.top_logic.util.sched.I18NConstants.COMPRESSED_TASK_RESULT_LIST__TASK = Compressed task result list: {0}
 class.com.top_logic.util.sched.I18NConstants.CREATED_TASK__TASK = Created task: {0}
